--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,17 +8,38 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
-  flutter:
+  provider: ^6.0.0
+  flutter_localizations:
     sdk: flutter
 
+  shared_preferences: ^2.0.15
+  flutter_spinkit: ^5.2.1
   cupertino_icons: ^1.0.8
   lottie: ^3.3.1
   google_fonts: ^6.2.1
+  flutter_polyline_points: ^2.1.0
+  razorpay_flutter: ^1.4.0
+  table_calendar: ^3.1.3
+
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.4.4
+  firebase_auth: ^5.3.1
+
+  google_maps_flutter: ^2.12.1
+  geocoding: ^3.0.0
+  location: ^8.0.0
+  geolocator: ^13.0.4
 
 dev_dependencies:
+  flutter_launcher_icons: 0.14.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/station-logo-removebg-preview.png"
 
 flutter:
   uses-material-design: true
@@ -26,3 +47,4 @@ flutter:
   assets:
     - assets/ev_animation.json
     - assets/background_ev.jpg
+    - assets/station-logo-removebg-preview.png
