--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ev_charging
+name: EVConnect
 description: "A new Flutter project."
 publish_to: 'none'
 
@@ -11,7 +11,7 @@ dependencies:
   provider: ^6.0.0
   flutter_localizations:
     sdk: flutter
-
+  video_player: ^2.7.2
   shared_preferences: ^2.0.15
   flutter_spinkit: ^5.2.1
   cupertino_icons: ^1.0.8
@@ -20,11 +20,9 @@ dependencies:
   flutter_polyline_points: ^2.1.0
   razorpay_flutter: ^1.4.0
   table_calendar: ^3.1.3
-
   firebase_core: ^3.12.1
   cloud_firestore: ^5.4.4
   firebase_auth: ^5.3.1
-
   google_maps_flutter: ^2.12.1
   geocoding: ^3.0.0
   location: ^8.0.0
@@ -32,6 +30,7 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: 0.14.3
+  flutter_native_splash: ^2.3.4
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
@@ -39,12 +38,27 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/station-logo-removebg-preview.png"
+  image_path: "assets/ev_icon.png"
+
+
+flutter_native_splash:
+  android: true
+  ios: true
+  fullscreen: true
+  color: "#FFFFFF"
+  color_dark: "#FFFFFF"
+  image: assets/ev_icon.png
+  image_dark: assets/ev_icon.png
+  image_scale: 0.4   # <-- This line should be here, NOT inside android_12
+  android_12:
+    image: assets/ev_icon.png
+    icon_background_color: "#FFFFFF"
+    color: "#FFFFFF"
+
+
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/ev_animation.json
-    - assets/background_ev.jpg
-    - assets/station-logo-removebg-preview.png
+    - assets/ev_icon.png
